<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_gradient"
    android:padding="@dimen/spacing_large">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/writing_title"
        style="@style/TitleText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/writing_instruction"
        style="@style/InstructionText" />

    <EditText
        android:id="@+id/writingInput"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/writing_input_background"
        android:padding="@dimen/spacing_xxlarge"
        android:textSize="@dimen/text_size_writing"
        android:textColor="@color/text_primary"
        android:hint="@string/writing_hint"
        android:textColorHint="@color/text_secondary"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:layout_margin="@dimen/spacing_large"
        android:lineSpacingExtra="8dp"
        android:minLines="3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/spacing_medium">

        <Button
            android:id="@+id/btnClearText"
            android:layout_width="0dp"
            android:layout_height="@dimen/small_button_height"
            android:layout_weight="1"
            android:text="@string/clear_text"
            android:drawableStart="@drawable/ic_clear_large"
            android:drawablePadding="@dimen/spacing_small"
            style="@style/SmallButton"
            android:layout_margin="@dimen/spacing_small" />

        <Button
            android:id="@+id/btnSpeakText"
            android:layout_width="0dp"
            android:layout_height="@dimen/small_button_height"
            android:layout_weight="1"
            android:text="@string/speak_text"
            android:drawableStart="@drawable/ic_sound_large"
            android:drawablePadding="@dimen/spacing_small"
            style="@style/SmallButton"
            android:layout_margin="@dimen/spacing_small" />

    </LinearLayout>

</LinearLayout>